completed footer, changed testimonial

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,7 +114,7 @@ a {
 
 .header {
   z-index: 9999;
-  background: var(--background);
+  background: #fcfeff;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -193,10 +193,10 @@ a {
   display: flex;
   opacity: 1;
   transition: all 0.5s;
-  z-index: -1; }
+  z-index: -99999; }
   @media only screen and (max-width: 50em) {
     .nav__list {
-      opacity: 0;
+      opacity: 1;
       width: 100vw;
       position: absolute;
       right: 0;
@@ -207,7 +207,8 @@ a {
       padding-bottom: 1rem;
       font-size: 1.75rem;
       letter-spacing: 0.3rem;
-      color: white; } }
+      color: white;
+      z-index: -99999; } }
   .nav__list--item {
     padding: 0 0.7rem;
     border-radius: 5px;
@@ -217,15 +218,12 @@ a {
   .nav__list .nav--link {
     opacity: 1; }
 
-.hamburger {
-  transform: translateY(3.2rem);
-  opacity: 1;
-  background: white; }
-  .hamburger .nav--link {
-    opacity: 1; }
-
-.hamburger-title {
-  transform: translateY(20rem); }
+@media only screen and (max-width: 50em) {
+  .hamburger {
+    position: absolute;
+    z-index: -9999;
+    transform: translateY(3.2rem);
+    background: white; } }
 
 /* The Modal (background) */
 .modal {
@@ -389,10 +387,10 @@ a {
 
 /* Backgorund Images */
 .slide:first-child {
-  background: url("..//..//img/McFarland Final.png") no-repeat center center/cover; }
+  background: url("..//..//img/Laguna Woods.jpg") no-repeat center center/cover; }
 
 .slide:nth-child(2) {
-  background: url("..//..//img/Laguna Woods.jpg") no-repeat center center/cover; }
+  background: url("..//..//img/McFarland Final.png") no-repeat center center/cover; }
 
 .slide:nth-child(3) {
   background: url("..//..//img/gal-9.jpeg") no-repeat center center/cover; }
@@ -689,7 +687,7 @@ a {
       margin: 0 auto; }
       .card__details ul li {
         text-align: center;
-        font-size: 1.5rem;
+        font-size: 2rem;
         padding: 1rem; }
         .card__details ul li:not(:last-child) {
           border-bottom: 1px solid #aaa; }
@@ -717,13 +715,13 @@ a {
         box-shadow: none; } }
 
 .expand--1 {
-  height: 68vh; }
+  height: 100%; }
 
 .expand--2 {
-  height: 75vh; }
+  height: 100%; }
 
 .expand--3 {
-  height: 98vh; }
+  height: 100%; }
 
 .gallery__wrapper {
   background-color: #fff;
@@ -817,28 +815,57 @@ a {
   .about__container--para {
     padding: 6rem;
     font-size: 2rem; }
-  .about__container .licence__info {
-    padding: 4rem;
-    text-align: right;
-    font-weight: 600;
-    font-size: 2rem;
-    border: solid 2px black;
-    background: #000;
-    color: #fff; }
-    .about__container .licence__info:before {
-      content: "";
-      width: 3px;
-      height: 100%;
-      border: solid 3px yellow;
-      background-color: yellow;
-      margin-right: 3rem; }
-    .about__container .licence__info:after {
-      content: "";
-      width: 3px;
-      height: 100%;
-      border: solid 3px yellow;
-      background-color: yellow;
-      margin-left: 3rem; }
+
+.form--container {
+  width: 50%;
+  margin: 0 auto;
+  padding: 6rem 0;
+  font-size: 2rem; }
+  @media only screen and (max-width: 37.5em) {
+    .form--container {
+      width: 87%; } }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 0;
+  width: 100%;
+  background: #fff; }
+  .form--thanks {
+    text-align: center; }
+  .form__label {
+    font-size: 1.5rem;
+    display: block;
+    pointer-events: none;
+    transition: all 0.3s; }
+  .form__textarea {
+    resize: none;
+    border-radius: 5px; }
+  .form__input:placeholder-shown + .form__label {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-4rem); }
+  .form__input {
+    display: block;
+    width: 100%;
+    font-size: 1.8rem;
+    font-family: inherit;
+    color: #000;
+    padding: 1rem;
+    border: none;
+    border-radius: 2px;
+    border-bottom: 3px solid black;
+    transition: all 0.3s; }
+    .form__input::placeholder {
+      color: #929292; }
+    .form__input:focus {
+      outline: none;
+      box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+      border-bottom: 3px solid var(--yellow); }
+    .form__input:focus:valid {
+      border-bottom: 3px solid var(--passed); }
+    .form__input:focus:invalid {
+      border-bottom: 3px solid var(--danger); }
 
 .testimonial__container {
   height: auto;
@@ -857,16 +884,18 @@ a {
     height: 100%;
     padding: 2rem 1.5rem 2rem 1.5rem;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
     font-size: 2rem;
     text-overflow: auto; }
+    @media only screen and (max-width: 50em) {
+      .testimonial__container--wrapper {
+        flex-direction: column; } }
 
 .review {
   text-align: center;
-  padding: 1rem; }
-  .review:not(:last-child) {
-    border-bottom: 1px solid black; }
+  padding: 1rem;
+  border: solid 1px black;
+  margin: 1rem 0; }
   .review:not(:first-child) {
     padding-top: 2.7rem; }
   .review__user--name {
@@ -896,89 +925,52 @@ a {
     line-height: 0;
     font-size: 15rem;
     z-index: 0; }
+  @media only screen and (max-width: 50em) {
+    .review__para {
+      padding: 0 3rem; } }
 
 .footer {
   display: flex;
   flex-direction: column;
   font-size: 2rem;
   height: 100%;
-  width: 100vw;
-  background: #fff; }
-  .footer__info {
+  width: 100%;
+  padding: 3rem 0;
+  background: #000;
+  color: #fff; }
+  .footer__phone--number {
+    color: rgba(251, 255, 0, 0.719); }
+    .footer__phone--number:hover {
+      color: red; }
+  .footer__container {
     display: flex;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
     height: 100%; }
     @media only screen and (max-width: 50em) {
-      .footer__info {
+      .footer__container {
         flex-direction: column;
         align-items: center;
         justify-content: stretch; } }
-  @media only screen and (max-width: 50em) {
-    .footer hr {
-      display: none; } }
 
-.contact--info {
-  width: 50%;
-  height: 90vh;
-  padding: 3rem 6rem;
+.footer--info {
+  width: 100%;
+  height: 100%;
   text-align: center; }
   @media only screen and (max-width: 50em) {
-    .contact--info {
+    .footer--info {
       padding: 3rem 0;
-      height: 30%; } }
+      width: 90%;
+      height: 30%;
+      font-size: 1.5rem; } }
 
-.footer__form {
-  width: 50%;
-  padding: 3rem 6rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center; }
-  @media only screen and (max-width: 50em) {
-    .footer__form {
-      padding: 3rem 0; } }
-
-.form--container {
-  width: 50%;
-  margin: 0 auto;
-  padding: 6rem;
-  font-size: 2rem; }
-
-.form {
-  display: flex;
-  flex-direction: column;
-  padding: 1rem 0;
-  width: 100%;
-  background: #fff; }
-  .form__label {
-    display: block;
-    pointer-events: none;
-    transition: all 0.3s; }
-  .form__textarea {
-    resize: none;
-    border-radius: 5px; }
-  .form__input:placeholder-shown + .form__label {
-    opacity: 0;
-    visibility: hidden;
-    transform: translateY(-4rem); }
-  .form__input {
-    display: block;
-    width: 100%;
-    font-size: 1.8rem;
-    font-family: inherit;
-    color: #000;
-    padding: 1rem;
-    border: none;
-    border-radius: 2px;
-    border-bottom: 3px solid black;
-    transition: all 0.3s; }
-    .form__input::placeholder {
-      color: #000; }
-    .form__input:focus {
-      outline: none;
-      box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
-      border-bottom: 3px solid var(--yellow); }
-    .form__input:focus:valid {
-      border-bottom: 3px solid var(--passed); }
-    .form__input:focus:invalid {
-      border-bottom: 3px solid var(--danger); }
+.license--number {
+  display: inline-block;
+  text-align: end;
+  padding: 0 6rem;
+  font-size: 1.7rem;
+  color: rgba(251, 255, 0, 0.719); }
+  .license--number p {
+    display: inline-block;
+    padding: 0 1rem;
+    color: white; }
