--- a/views/pages/about-us.ejs
+++ b/views/pages/about-us.ejs
@@ -6,18 +6,17 @@
 </div>
 <section class="about__container">
   <div class="about__container--wrapper">
-    
     <p class="about__container--para">
-      J&M General Contractors. Inc is a fully licensed and
+      <strong>J&M General Contractors. Inc</strong> is a fully licensed and
       bonded General and Electrical Contractor based in
-      Orange County, CA. At J&M we aim to win the customer,
-      not the job. For 20 years Mike Zellmer, owner of J&M
-      General Contractors, Inc., has built long lasting
+      Orange County, CA. At <strong>J&M</strong> we aim to win the customer,
+      not the job. For 20 years Mike Zellmer, owner of <strong>J&M
+      General Contractors, Inc.</strong>, has built long lasting
       relationships with his customers achieved by
       establishing and maintaining mutual trust and respect
-      between the company and the client. Our competitive
+      between the company and the client. <br /><br />Our competitive
       advantage, and greatest asset, is our people. Every
-      one of J&M's employees, from the office staff to our
+      one of <strong>J&M's</strong> employees, from the office staff to our
       team of field technicians, as well as all of our many
       trusted vendors, are highly knowledgeable, trained
       professionals who consistently exceed expectations by
@@ -25,7 +24,6 @@
       customer needs, reflecting their sincere care for and
       loyalty to our customers. Contractors<br />
     </p>
-    <strong class="licence__info">License # 1002460</strong>
   </div>
 </section>
 
