--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,29 +1,28 @@
   <footer class="footer" id="contact">
-    <section class="footer__info">
-      <div class="contact--info">
+    <section class="footer__container">
+      <div class="footer--info">
 
         <div class="footer__info--address">
           J & M General Contractors 
-          Fullerton, CA 
-          License # 1002460
+          Fullerton, CA
         </div>
         <div class="footer__info--phone">
-          Call us: 866-755-4001 
+          Call us: <a class="footer__phone--number" href="tel:866-755-4001">866-755-4001</a> 
         </div>
         <p>
         OR
         to reach
         </p>
         <div class="footer__info--sub-contact">
-          <p>Nancy Montellano/Office Manager: 714-323-0649</p>
-          <p>Katrina Shuper/Administration: 714-872-7224</p>
+          <p>Nancy Montellano/Office Manager: <a class="footer__phone--number" href="tel:714-323-0649">714-323-0649</a></p>
+          <p>Katrina Shuper/Administration: <a class="footer__phone--number" href="tel:714-872-7224">714-872-7224</a></p>
         </div>
         <div class="footer__info--email">
-          Email us:SERVICE@JMGCINC.COM
+          Email us: SERVICE@JMGCINC.COM
         </div>
       </div>
     </section>
+    <strong class="license--number"><p>License</p>#1002460</strong>
   </footer>
   </body>
-  <script src="src/components/nav.js"></script>
 </html>
