--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,23 +17,24 @@
 		></script>
 	</head>
 	<body>
-	<header class="header">
-		<h1 class="logo"><a href="/"><img class="logo-img" src="./img/images/Logo.jpg" alt="J&M logo"></a></h1>
-		<input type="checkbox" id="nav-toggle" class="nav-toggle"/>
-		<nav class="nav">
-			<ul class="nav__list">
-				<li class="nav__list--item"><a class="nav--link" href="/">Home</a></li>
-				<li class="nav__list--item"><a class="nav--link" href="/services">Services</a></li>
-				<li class="nav__list--item"><a class="nav--link" href="/gallery">Gallery</a></li>
-				<li class="nav__list--item"><a class="nav--link" href="/about-us">About</a></li>
-				<li class="nav__list--item"><a class="nav--link" href="/testimonials">Testimonial</a></li>
-				<li class="nav__list--item"><a class="nav--link" href="/contact" >Contact</a></li>
+		<header class="header">
+			<h1 class="logo"><a href="/"><img class="logo-img" src="./img/images/Logo.jpg" alt="J&M logo"></a></h1>
+			<input type="checkbox" id="nav-toggle" class="nav-toggle"/>
+			<nav class="nav">
+				<ul class="nav__list">
+					<li class="nav__list--item"><a class="nav--link" href="/">Home</a></li>
+					<li class="nav__list--item"><a class="nav--link" href="/services">Services</a></li>
+					<li class="nav__list--item"><a class="nav--link" href="/gallery">Gallery</a></li>
+					<li class="nav__list--item"><a class="nav--link" href="/about-us">About</a></li>
+					<li class="nav__list--item"><a class="nav--link" href="/testimonials">Testimonial</a></li>
+					<li class="nav__list--item"><a class="nav--link" href="/contact" >Contact</a></li>
 			</ul>
 		</nav>
 		<label for="nav-toggle" class="nav-toggle-label">
 			<span></span>
 		</label>
 	</header>
+	<script src="src/components/nav.js"></script>
 	<br>
 	<br>
 	<br>
