--- a/public/sass/pages/_contact.scss
+++ b/public/sass/pages/_contact.scss
@@ -1,45 +1,82 @@
-// 	& .contact--wrapper {
-// 		position: relative;
-// 		box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+.form--container {
+	width: 50%;
+	margin: 0 auto;
 
-// 		width: 50%;
-// 		padding: 6rem;
+	padding: 6rem 0;
+    font-size: 2rem;
+    
+    @media only screen and (max-width: $bp-small) {
+        width: 87%;
+    }
+}
 
-// 		display: flex;
-// 		flex-direction: row;
+.form {
+	display: flex;
+	flex-direction: column;
 
-// 		justify-content: space-between;
+	padding: 1rem 0;
+	width: 100%;
+	background: $color-white;
 
-// 		background-image: linear-gradient(
-// 				105deg,
-// 				rgba(235, 232, 228, 0.884) 0%,
-// 				rgba(202, 202, 202, 0.87) 50%
-// 			),
-// 			url("../img/residential_small.jpg");
-// 		height: 100%;
-// 		background-origin: top;
-// 		background-size: cover;
-// 		background-repeat: no-repeat;
-// 	}
+	&--thanks {
+		text-align: center;
+	}
+	&__group {
+		
+	}
 
-// 	// __COMMENT_AREA__
-// 	& textarea {
-// 		max-width: 33vw;
-// 		min-width: 33vw;
+	&__label {
+		font-size: 1.5rem;
 
-// 		max-height: 35vh;
-// 		min-height: 35vh;
+		display: block;
+		pointer-events: none;
+		transition: all 0.3s;
+	}
 
-// 		@media only screen and(max-width: $bp-medium) {
-// 			max-width: 80vw;
-// 			min-width: 80vw;
-// 		}
-// 	}
-// }
+	&__textarea {
+		resize: none;
+		border-radius: 5px;
+	}
 
-// 	&__input:placeholder-shown + &__label {
-// 		opacity: 0;
-// 		visibility: hidden;
-// 		transform: translateY(-4rem);
-// 	}
-// }
+	&__input:placeholder-shown + &__label {
+        opacity: 0;
+        visibility: hidden;
+        transform: translateY(-4rem);
+	}
+	
+	&__input {
+		display: block;
+		width: 100%;
+
+		font-size: 1.8rem;
+		font-family: inherit;
+		// color: $color-white;
+		color: $color-black;
+
+		padding: 1rem;
+
+		border: none;
+		border-radius: 2px;
+		border-bottom: 3px solid black;
+
+		transition: all 0.3s;
+
+		&::placeholder {
+			color: #929292;
+		}
+
+		&:focus {
+			outline: none;
+			box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
+			border-bottom: 3px solid var(--yellow);
+		}
+
+		&:focus:valid {
+			border-bottom: 3px solid var(--passed);
+			
+		}
+		&:focus:invalid {
+			border-bottom: 3px solid var(--danger);
+		}
+	}
+}
