--- a/public/sass/pages/_testimonial.scss
+++ b/public/sass/pages/_testimonial.scss
@@ -21,11 +21,15 @@
 		padding: 2rem 1.5rem 2rem 1.5rem;
 
 		display: flex;
-		flex-direction: column;
+		// flex-direction: column;
 		justify-content: space-between;
 
 		font-size: 2rem;
 		text-overflow: auto;
+
+		@media only screen and (max-width: $bp-medium) {
+			flex-direction: column;
+		}
 	}
 }
 
@@ -33,10 +37,13 @@
 	text-align: center;
 	padding: 1rem;
 
+	border: solid 1px black;
+	margin: 1rem 0;
+
 	// give the border a line except last child
-	&:not(:last-child) {
-		border-bottom: 1px solid black;
-	}
+	// &:not(:last-child) {
+	// 	border-bottom: 1px solid black;
+	// }
 	&:not(:first-child) {
 		padding-top: 2.7rem;
 	}
@@ -47,6 +54,7 @@
 			font-size: 2.4rem;
 		}
 	}
+
 }
 .review__para {
 	overflow: visible;
@@ -75,5 +83,8 @@
 		line-height: 0;
 		font-size: 15rem;
 		z-index: 0;
+	}
+	@media only screen and (max-width: $bp-medium) {
+		padding: 0 3rem;
 	}
 }
