--- a/views/pages/services.ejs
+++ b/views/pages/services.ejs
@@ -34,11 +34,7 @@
         class="card__side card__side--bottom 
                card__side--bottom-3">
         <div class="card__cta">
-          <a 
-          class="btn btn-expand"
-          id="expandBtn--1">
-          +
-          </a>
+          <a class="btn btn-expand" id="expandBtn--1">+</a>
         </div>
       </div>
     </div>
@@ -81,11 +77,7 @@
       class="card__side card__side--bottom 
              card__side--bottom-3">
       <div class="card__cta">
-        <a 
-          class="btn btn-expand"
-          id="expandBtn--2">
-          +
-          </a>
+        <a class="btn btn-expand" id="expandBtn--2">+</a>
       </div>
     </div>
   </div>
@@ -145,11 +137,7 @@
         class="card__side card__side--bottom 
                card__side--bottom-3">
         <div class="card__cta">
-          <a 
-          class="btn btn-expand"
-          id="expandBtn--3">
-          +
-          </a>
+          <a class="btn btn-expand" id="expandBtn--3">+</a>
         </div>
       </div>
     </div>
