--- a/views/pages/services.ejs
+++ b/views/pages/services.ejs
@@ -97,9 +97,9 @@
         <div class="card__details card__details--3">
           <ul>
             <li>
-              Electrical Panel Upgrades &
+              Electrical Panel Upgrades &<br>
               Installations 3 phase
-              (Commercial/Industrial) 2 phase
+              (Commercial/Industrial)<br> 2 phase
               (Residential)
             </li>
             <li>
