--- a/public/sass/components/_button.scss
+++ b/public/sass/components/_button.scss
@@ -52,13 +52,13 @@
 }
 
 .btn-expand {
-	width: 8%;
+	width: 5%;
 	height: 20%;
 	margin: 0 auto 0 auto;
 	font-family: inherit;
 	font-size: 2rem;
 	font-weight: 600;
-	padding: 0.5em 1em;
+	// padding: 0.5em 1em;
 
 	color: #444; /* rgba not supported (IE 8) */
 	color: rgba(0, 0, 0, 0.8); /* rgba supported */
@@ -80,6 +80,9 @@
 		box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset,
 			0 0 6px rgba(0, 0, 0, 0.2) inset;
 		border-color: #000;
+	}
+	@media only screen and (max-width: $bp-medium) {
+		width: 15%;
 	}
 }
 
