--- a/public/css/style.css
+++ b/public/css/style.css
@@ -246,6 +246,7 @@ a {
   margin: 0 auto 0 auto;
   display: block;
   max-width: 57rem;
+  object-fit: cover;
   border: solid 1rem #fff; }
 
 /* Caption of Modal Image */
@@ -310,14 +311,6 @@ a {
   .modal-content {
     width: 80%; } }
 
-.left {
-  height: 5rem;
-  width: 5rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: pink; }
-
 .galleryDisplay {
   position: relative;
   width: 100%;
@@ -326,7 +319,8 @@ a {
 .galleryDisplay__container {
   display: flex;
   justify-content: space-between;
-  overflow: auto; }
+  overflow: auto;
+  padding: 1rem 0; }
 
 .modal-content--bottom {
   height: 100px;
@@ -338,27 +332,6 @@ a {
     opacity: 1;
     cursor: pointer;
     transform: scale(1.05); }
-
-.arrows {
-  color: #fff;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 59vh; }
-  .arrows--left, .arrows--right {
-    text-align: center;
-    padding: 1rem 0;
-    font-size: 2rem;
-    display: inline-block;
-    width: 49.5%;
-    height: 100%; }
-    .arrows--left > p, .arrows--right > p {
-      font-size: 21rem; }
-  .arrows--left {
-    padding-right: 20vw; }
-  .arrows--right {
-    padding-left: 20vw; }
 
 .slider {
   overflow: hidden;
@@ -751,45 +724,101 @@ a {
   .gallery__item--1 {
     grid-row: 1 / span 2;
     grid-column: 1 / span 2; }
+    @media only screen and (max-width: 50em) {
+      .gallery__item--1 {
+        grid-row: 1 / span 4;
+        grid-column: 1 / span 4; } }
   .gallery__item--2 {
     grid-row: 1 / span 3;
     grid-column: 3 / span 3; }
+    @media only screen and (max-width: 50em) {
+      .gallery__item--2 {
+        grid-row: 1 / span 4;
+        grid-column: 5 / span 4; } }
   .gallery__item--3 {
     grid-row: 1 / span 2;
     grid-column: 6 / 7; }
+    @media only screen and (max-width: 50em) {
+      .gallery__item--3 {
+        grid-row: 13 / span 4;
+        grid-column: 1 / span 4; } }
   .gallery__item--4 {
     grid-row: 1 / span 2;
     grid-column: 7 / -1; }
+    @media only screen and (max-width: 50em) {
+      .gallery__item--4 {
+        grid-row: 13 / span 4;
+        grid-column: 5 / span 4; } }
   .gallery__item--5 {
     grid-row: 3 / span 3;
     grid-column: 1 / span 2; }
+    @media only screen and (max-width: 50em) {
+      .gallery__item--5 {
+        grid-row: 5 / span 4;
+        grid-column: 1 / span 4; } }
   .gallery__item--6 {
     grid-row: 4 / span 2;
     grid-column: 3 / span 2; }
+    @media only screen and (max-width: 50em) {
+      .gallery__item--6 {
+        grid-row: 5 / span 4;
+        grid-column: 5 / span 4; } }
   .gallery__item--7 {
     grid-row: 4 / 5;
     grid-column: 5 / 6; }
+    @media only screen and (max-width: 50em) {
+      .gallery__item--7 {
+        grid-row: 17 / span 4;
+        grid-column: 7 / span 2; } }
   .gallery__item--8 {
     grid-row: 3 / span 2;
     grid-column: 6 / span 2; }
+    @media only screen and (max-width: 50em) {
+      .gallery__item--8 {
+        grid-row: 17 / span 4;
+        grid-column: 1 / span 2; } }
   .gallery__item--9 {
     grid-row: 3 / span 3;
     grid-column: 8 / -1; }
+    @media only screen and (max-width: 50em) {
+      .gallery__item--9 {
+        grid-row: 17 / span 4;
+        grid-column: 3 / span 2; } }
   .gallery__item--10 {
     grid-row: 6 / span 2;
     grid-column: 1 / 2; }
+    @media only screen and (max-width: 50em) {
+      .gallery__item--10 {
+        grid-row: 9 / span 4;
+        grid-column: 1 / span 4; } }
   .gallery__item--11 {
     grid-row: 6 / span 2;
     grid-column: 2 / span 2; }
+    @media only screen and (max-width: 50em) {
+      .gallery__item--11 {
+        grid-row: 9 / span 4;
+        grid-column: 5 / span 4; } }
   .gallery__item--12 {
     grid-row: 6 / span 2;
     grid-column: 4 / 5; }
+    @media only screen and (max-width: 50em) {
+      .gallery__item--12 {
+        grid-row: 21 / span 4;
+        grid-column: 5 / span 4; } }
   .gallery__item--13 {
     grid-row: 5 / span 3;
     grid-column: 5 / span 3; }
+    @media only screen and (max-width: 50em) {
+      .gallery__item--13 {
+        grid-row: 21 / span 4;
+        grid-column: 1 / span 4; } }
   .gallery__item--14 {
     grid-row: 6 / span 2;
     grid-column: 8 / -1; }
+    @media only screen and (max-width: 50em) {
+      .gallery__item--14 {
+        grid-row: 17 / span 4;
+        grid-column: 5 / span 2; } }
   .gallery__img {
     width: 100%;
     height: 100%;
@@ -799,6 +828,11 @@ a {
     .gallery__img:hover {
       opacity: 0.5;
       cursor: pointer; }
+  @media only screen and (max-width: 50em) {
+    .gallery {
+      grid-template-columns: repeat(8, 1fr);
+      grid-template-rows: repeat(24, 5vw);
+      grid-gap: 0.5rem; } }
 
 .about__container {
   height: 100%;
