--- a/public/sass/pages/_gallery.scss
+++ b/public/sass/pages/_gallery.scss
@@ -31,71 +31,127 @@
 		&--1 {
 			grid-row: 1 / span 2;
 			grid-column: 1 / span 2;
+			@media only screen and (max-width: $bp-medium) {
+				grid-row: 1 / span 4;
+				grid-column: 1 / span 4;
+			}
 		}
 
 		&--2 {
 			grid-row: 1 / span 3;
 			grid-column: 3 / span 3;
+			@media only screen and (max-width: $bp-medium) {
+				grid-row: 1 / span 4;
+				grid-column: 5 / span 4;
+			}
 		}
 
 		&--3 {
 			grid-row: 1 / span 2;
 			grid-column: 6 / 7;
+			@media only screen and (max-width: $bp-medium) {
+				grid-row: 13 / span 4;
+				grid-column: 1 / span 4;
+			}
 		}
 
 		&--4 {
 			grid-row: 1 / span 2;
 			grid-column: 7 / -1;
+			@media only screen and (max-width: $bp-medium) {
+				grid-row: 13 / span 4;
+				grid-column: 5 / span 4;
+			}
 		}
 
 		&--5 {
 			grid-row: 3 / span 3;
 			grid-column: 1 / span 2;
+			@media only screen and (max-width: $bp-medium) {
+				grid-row: 5 / span 4;
+				grid-column: 1 / span 4;
+			}
 		}
 
 		&--6 {
 			grid-row: 4 / span 2;
 			grid-column: 3 / span 2;
+			@media only screen and (max-width: $bp-medium) {
+				grid-row: 5 / span 4;
+				grid-column: 5 / span 4;
+			}
 		}
 
 		&--7 {
 			grid-row: 4 / 5;
 			grid-column: 5 / 6;
+			@media only screen and (max-width: $bp-medium) {
+				grid-row: 17 / span 4;
+				grid-column: 7 / span 2;
+			}
 		}
 
 		&--8 {
 			grid-row: 3 / span 2;
 			grid-column: 6 / span 2;
+			@media only screen and (max-width: $bp-medium) {
+				grid-row: 17 / span 4;
+				grid-column: 1 / span 2;
+			}
 		}
 
 		&--9 {
 			grid-row: 3 / span 3;
 			grid-column: 8 / -1;
+			@media only screen and (max-width: $bp-medium) {
+				grid-row: 17 / span 4;
+				grid-column: 3 / span 2;
+			}
 		}
 
 		&--10 {
 			grid-row: 6 / span 2;
 			grid-column: 1 / 2;
+			@media only screen and (max-width: $bp-medium) {
+				grid-row: 9 / span 4;
+				grid-column: 1 / span 4;
+			}
 		}
 
 		&--11 {
 			grid-row: 6 / span 2;
 			grid-column: 2 / span 2;
+			@media only screen and (max-width: $bp-medium) {
+				grid-row: 9 / span 4;
+				grid-column: 5 / span 4;
+			}
 		}
 
 		&--12 {
 			grid-row: 6 / span 2;
 			grid-column: 4 / 5;
+			@media only screen and (max-width: $bp-medium) {
+				grid-row: 21 / span 4;
+				grid-column: 5 / span 4;
+			}
 		}
 
 		&--13 {
 			grid-row: 5 / span 3;
 			grid-column: 5 / span 3;
+			@media only screen and (max-width: $bp-medium) {
+				grid-row: 21 / span 4;
+				grid-column: 1 / span 4;
+			}
 		}
 
 		&--14 {
 			grid-row: 6 / span 2;
 			grid-column: 8 / -1;
+			@media only screen and (max-width: $bp-medium) {
+				grid-row: 17 / span 4;
+				grid-column: 5 / span 2;
+			}
 		}
 	}
 
@@ -110,5 +166,11 @@
 			opacity: 0.5;
 			cursor: pointer;
 		}
+	}
+
+	@media only screen and (max-width: $bp-medium) {
+		grid-template-columns: repeat(8, 1fr);
+		grid-template-rows: repeat(24, 5vw);
+		grid-gap: 0.5rem;
 	}
 }
