--- a/public/sass/components/_navbar.scss
+++ b/public/sass/components/_navbar.scss
@@ -105,7 +105,7 @@
 	display: flex;
 
 	opacity: 1;
-	transition: all 0.5s;
+	// transition: all 0.5s;
 	z-index: -99999;
 
 	@media only screen and (max-width: $bp-medium) {
@@ -130,7 +130,7 @@
 	&--item {
 		padding: 0 0.7rem;
 		border-radius: 5px;
-		transition: all 0.2s;
+		// transition: all 0.2s;
 
 		&:hover {
 			// background-image: linear-gradient(
@@ -147,7 +147,10 @@
 	}
 
 	& .nav--link {
-		opacity: 1;
+		@media only screen and (max-width: $bp-medium) {
+			opacity: 0;
+
+		}
 	}
 }
 
@@ -160,12 +163,8 @@
 		transform: translateY(3.2rem);
 		// opacity: 1;
 		background: white;
-		// & .nav--link {
-		// 	opacity: 1;
-		// }
+		& .nav--link {
+			opacity: 1;
+		}
 	}
 }
-
-// .hamburger-title {
-// 	transform: translateY(20rem);
-// }
