--- a/public/css/style.css
+++ b/public/css/style.css
@@ -936,22 +936,23 @@ a {
   padding: 1rem;
   border: solid 1px black;
   margin: 1rem 0; }
-  .review:not(:first-child) {
-    padding-top: 2.7rem; }
   .review__user--name {
     font-size: 2.4rem; }
+  .review__rating {
+    border-bottom: solid 1px black; }
 
 .review__para {
   overflow: visible;
   width: 100%;
   position: relative;
   padding: 1rem;
+  text-align: left;
   z-index: 1; }
   .review__para::before {
     content: "\201C";
     color: rgba(133, 133, 133, 0.4);
     position: absolute;
-    top: 5rem;
+    top: 7rem;
     left: -1rem;
     line-height: 0;
     font-size: 15rem;
