--- a/public/sass/pages/_testimonial.scss
+++ b/public/sass/pages/_testimonial.scss
@@ -40,19 +40,16 @@
 	border: solid 1px black;
 	margin: 1rem 0;
 
-	// give the border a line except last child
-	// &:not(:last-child) {
-	// 	border-bottom: 1px solid black;
-	// }
-	&:not(:first-child) {
-		padding-top: 2.7rem;
-	}
 	&__user {
 		&--box {
 		}
 		&--name {
 			font-size: 2.4rem;
 		}
+	}
+
+	&__rating {
+		border-bottom: solid 1px black;
 	}
 
 }
@@ -63,12 +60,13 @@
 
 	padding: 1rem;
 
+	text-align: left;
 	z-index: 1;
 	&::before {
 		content: "\201C";
 		color: rgba(133, 133, 133, 0.4);
 		position: absolute;
-		top: 5rem;
+		top: 7rem;
 		left: -1rem;
 		line-height: 0;
 		font-size: 15rem;
