--- a/views/partials/submitForm.ejs
+++ b/views/partials/submitForm.ejs
@@ -1,4 +1,6 @@
 <section class="footer__form">
-  <p class="submit-thanks">Thanks for submitting!</p>
-  <p class="submit-thanks">We will contact you shortly!</p>
+  <div class="submit__container">
+      <p class="submit-thanks">Thanks for submitting!</p>
+      <p class="submit-thanks">We will contact you shortly!</p>
+  </div>
 </section>
