--- a/public/css/style.css
+++ b/public/css/style.css
@@ -342,8 +342,6 @@ a {
 
 .slide {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   opacity: 0;
@@ -371,8 +369,6 @@ a {
 
 .typewriter__container {
   position: absolute;
-  top: 0%;
-  left: 0%;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -858,6 +854,7 @@ a {
 
 .form--container {
   width: 50%;
+  min-height: 70vh;
   margin: 0 auto;
   padding: 6rem 0;
   font-size: 2rem; }
@@ -906,6 +903,14 @@ a {
       border-bottom: 3px solid var(--passed); }
     .form__input:focus:invalid {
       border-bottom: 3px solid var(--danger); }
+
+.submit__container {
+  padding-top: 6rem;
+  height: 50%; }
+
+.submit-thanks {
+  text-align: center;
+  font-size: 3rem; }
 
 .testimonial__container {
   height: auto;
