--- a/public/sass/components/_slider.scss
+++ b/public/sass/components/_slider.scss
@@ -9,8 +9,8 @@
 // where image is shown
 .slide {
 	position: absolute;
-	top: 0;
-	left: 0;
+	// top: 0;
+	// left: 0;
 	width: 100%;
 	height: 100%;
 	opacity: 0;
