--- a/public/css/style.css
+++ b/public/css/style.css
@@ -392,6 +392,15 @@ a {
       clip-path: none;
       background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.541), rgba(39, 52, 99, 0.568));
       border-radius: 1rem; } }
+  @media only screen and (hover: none) and (pointer: coarse) {
+    .typewriter__container {
+      width: 100%;
+      height: 100%;
+      padding: 0 1rem;
+      margin: auto auto;
+      clip-path: none;
+      background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.541), rgba(39, 52, 99, 0.568));
+      border-radius: 1rem; } }
 
 /* Cursor */
 .txt-type > .txt {
