--- a/public/sass/components/_typewriter.scss
+++ b/public/sass/components/_typewriter.scss
@@ -39,6 +39,22 @@
 		// 	backdrop-filter: blur(4px);
 		// }
 	}
+
+	@media only screen and (hover: none) and (pointer: coarse) {
+		width: 100%;
+		height: 100%;
+		padding: 0 1rem;
+		margin: auto auto;
+
+		clip-path: none;
+		background-image: linear-gradient(
+			to right bottom,
+			rgba(0, 0, 0, 0.541),
+			rgba(39, 52, 99, 0.568)
+		);
+
+		border-radius: 1rem;
+	}
 }
 
 /* Cursor */
